--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Your Portfolio</title>
+  <meta name="description" content="Sourav Karmakar's portfolio, a Backend Developer specializing in scalable APIs and databases.">
+  <title>SK - Portfolio</title>
+  <link rel="icon" href="image/favicon.ico" type="image/png">
+  <link rel="shortcut icon" href="image/favicon.ico" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Sourav</a>
+      <a class="navbar-brand" href="#">Name</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,22 +33,21 @@
   <!-- Home Section -->
   <section id="indexhome" class="text-center">
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <img src="image/main.jpg" class="img-fluid">
-            </div>
-            <div class="col-md-8">
-              <h2 class="display-5">Hello, I'm</h2>
-              <h2 class="display-5">"Sourav Karmakar" </h2>
-              <p class="lead m-5">I'm a Backend Developer who specializes in building scalable APIs and working with databases.</p>
-              <a href="projects.html" class="btn btn-success btn-lg">See My Projects</a>
-            </div>
+      <div class="row">
+        <div class="col-md-4">
+          <img src="image/mainrm.png" class="img-fluid" alt="a a">
         </div>
+        <div class="col-md-8">
+          <h2 class="display-5">Hello, I'm <span class="typed-out">Name</span></h2>
+          <p class="lead m-5">I'm a Backend Developer who specializes in building scalable APIs and working with databases.</p>
+          <a href="projects.html" class="btn btn-success btn-lg">See My Projects</a>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-dark text-white text-center">
+  <footer class="text-center bg-light text-dark">
     <p>Find me on <a href="https://github.com/yourusername" target="_blank" class="text-white">GitHub</a> and <a href="https://www.linkedin.com/in/yourname" target="_blank" class="text-white">LinkedIn</a>.</p>
   </footer>
 
