--- a/projects.html
+++ b/projects.html
@@ -3,24 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects - Your Portfolio</title>
+  <meta name="description" content="Sourav Karmakar's portfolio, a Backend Developer specializing in scalable APIs and databases.">
+  <title>SK - Portfolio</title>
+  <link rel="icon" href="image/favicon.ico" type="image/png">
+  <link rel="shortcut icon" href="image/favicon.ico" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Your Name</a>
+      <a class="navbar-brand" href="#">Name</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="projects.html">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+          <li class="nav-item"><a class="nav-link " href="index.html"> <i class="fa-solid fa-house"></i> Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="projects.html"> <i class="fa-solid fa-list-check"></i> Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html"> <i class="fa-solid fa-address-book"></i> Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="resume.html"> <i class="fa-solid fa-file-invoice"></i> Resume</a></li>
         </ul>
       </div>
     </div>
@@ -34,7 +39,7 @@
         <!-- Project 1 -->
         <div class="col-md-4">
           <div class="card mb-4">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 1">
+            <img src="image/project.png" class="pro-img-top img-fluid" alt="Project 1">
             <div class="card-body">
               <h5 class="card-title">Project 1</h5>
               <p class="card-text">A description of what Project 1 does. Built with Node.js and MongoDB.</p>
@@ -45,7 +50,7 @@
         <!-- Project 2 -->
         <div class="col-md-4">
           <div class="card mb-4">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 2">
+            <img src="image/project.png" class="pro-img-top img-fluid" alt="Project 2">
             <div class="card-body">
               <h5 class="card-title">Project 2</h5>
               <p class="card-text">A description of what Project 2 does. Built with Django and PostgreSQL.</p>
@@ -56,7 +61,7 @@
         <!-- Project 3 -->
         <div class="col-md-4">
           <div class="card mb-4">
-            <img src="https://via.placeholder.com/300" class="card-img-top" alt="Project 3">
+            <img src="image/project.png" class="pro-img-top img-fluid" alt="Project 3">
             <div class="card-body">
               <h5 class="card-title">Project 3</h5>
               <p class="card-text">A description of what Project 3 does. Built with Flask and SQLite.</p>
@@ -68,9 +73,14 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-dark text-white py-4 text-center">
-    <p>Find me on <a href="https://github.com/yourusername" target="_blank" class="text-white">GitHub</a> and <a href="https://www.linkedin.com/in/yourname" target="_blank" class="text-white">LinkedIn</a>.</p>
+   <!-- Footer -->
+  <footer class="text-center bg-light text-dark">
+    <p>Find me on</p>
+    <div>
+        <i class="fa-solid fa-envelope fa-2x"></i>
+        <i class="fa-brands fa-github fa-2x"></i>
+        <i class="fa-brands fa-linkedin fa-2x"></i>
+    </div>  
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
