--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h2 class="display-5">Hello, I'm <span class="typed-out">Name</span></h2>
           <p class="lead m-md-5">I'm a Backend Developer who specializes in building scalable APIs and working with databases.</p>
             <!--  <a href="projects.html" class="btn btn-success btn-lg">See My Projects</a>-->
-            <button class="button-73" role="button">See My Projects</button>
+            <a href="projects.html" class="button-73" role="button">See My Projects</a>
         </div>
       </div>
     </div>
