reduce image size to webp

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <img src="image/mainrm.png" class="img-fluid" alt="a a">
+          <img src="image/mainrm.webp" class="img-fluid" alt="a a">
         </div>
         <div class="col-md-8">
           <h2 class="display-5">Hello, I'm <span class="typed-out">Name</span></h2>
